# These files will end up in the install include directory
# For example, /usr/include
include_HEADERS = Display.h GpioPin.h Winstar.h Sysinfo.h optionparser.h Observer.h KeyPanel.hpp Scheduler.hpp IDGenerator.h MenuVisitors.hpp MoveVisitor.hpp HwLayer.hpp HwAcquaA5.hpp DisplayPanel.hpp DisplayVisitor.hpp
