# These files will end up in the install include directory
# For example, /usr/include
include_HEADERS = 	Display.h \
					DisplayPanel.hpp \
					GpioPin.h \
					homerd.h \
					HomerMenu.hpp \
					HwAcquaA5.hpp \
					HwLayer.hpp \
					IDGenerator.h \
					KeyButton.hpp \
					KeyPanel.hpp \
					Menu.hpp \
					MenuAble.hpp \
					MenuActionVisitors.hpp \
					MenuComponent.hpp \
					MenuDisplayVisitor.hpp \
					MenuException.hpp \
					MenuLeaf.hpp \
					MenuMoveVisitor.hpp \
					Observer.h \
					optionparser.h \
					Scheduler.hpp \
					Sensor.hpp \
					SimpleMenuElement.hpp \
					SubMenu.hpp \
					Sysinfo.h \
					Winstar.h
					