# These files will end up in the install include directory
# For example, /usr/include
include_HEADERS = 	Display.h \
					DisplayPanel.hpp \
					GpioPin.h \
					homerd.h \
					HwAcquaA5.hpp \
					HwLayer.hpp \
					IDGenerator.h \
					KeyButton.hpp \
					KeyPanel.hpp \
					menu/HomerMenu.hpp \
					menu/Menu.hpp \
					menu/MenuAble.hpp \
					menu/MenuActionVisitors.hpp \
					menu/MenuComponent.hpp \
					menu/MenuDisplayVisitor.hpp \
					menu/MenuException.hpp \
					menu/MenuLeaf.hpp \
					menu/MenuMoveVisitor.hpp \
					menu/MenuNavigatorVisitor.hpp \
					menu/SimpleMenuElement.hpp \
					menu/SubMenu.hpp \
					Observer.h \
					optionparser.h \
					Scheduler.hpp \
					sensor/BarometricDevice.hpp \
					sensor/BarometricSensor.hpp \
					sensor/Bmp085Device.hpp \
					sensor/CsvSensorDecorator.hpp \
					sensor/Sensor.hpp \
					sensor/SensorDecorator.hpp \
					sensor/SensorManager.hpp \
					sensor/TemperatureDevice.hpp \
					sensor/TemperatureSensor.hpp \
					sensor/IPAddressSensor.hpp \
					Sysinfo.h \
					Winstar.h
					