AM_LDFLAGS =  -llog4cplus -lpthread
AM_CPPFLAGS = -std=c++11 -I$(top_srcdir)/include

homerd_SOURCES= Display.cpp \
				GpioPin.cpp \
				KeyButton.cpp \
				KeyPanel.cpp \
				MenuDisplayVisitor.cpp \
				MenuLeaf.cpp \
				MenuMoveVisitor.cpp \
				Observer.cpp \
				SubMenu.cpp \
				Sysinfo.cpp \
				Winstar.cpp
				

